QQuickDrag: Properly support QColor as application/x-color

It implicitly adds the application/x-color role using the
fallback from QByteArray but it still results in a warning
"Don't know how to encode variant of type QMetaType(QColor)"

Fixes: QTBUG-134226
Pick-to: 6.8
Change-Id: Ie6fb8fefae61f5844f880aa485277f9c83d6e195
Reviewed-by: Liang Qi <liang.qi@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit ebf542072401a536f00c58f84dc67e71a2dfbde2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>